fix tags for new /healthcheck and /properties end-points
