# service/src/main/java/gov/nasa/pds/api/registry/configuration/OpenAPIClearedTags.java
@@ -19,7 +19,7 @@ import io.swagger.v3.oas.models.tags.Tag;
 public class OpenAPIClearedTags implements OpenApiCustomizer {
   protected static final Logger log = LoggerFactory.getLogger(OpenAPIClearedTags.class);
 
-  private static final String FILTERED_TAGS = "collections|bundles|products|classes";
+  private static final String FILTERED_TAGS = "collections|bundles|products|classes|healthcheck|properties";
 
   @Override
   public void customise(OpenAPI openApi) {
